--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=h, initial-scale=1.0">
-    <title>Personal PortFolio</title>
+    <title>Muhammad IrFan</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="sytle.css">
@@ -27,7 +27,7 @@
         <div class="overlay"></div>
 
 
-        <div class="nav-color p-2 rounded-bottom  fixed-top" style="width: 100vw; max-width: 100%;">
+        <div class="nav-color p-2 rounded-bottom bg-body-tertiary  fixed-top" style="width: 100vw; max-width: 100%;">
 
             <nav class="navbar container navbar-expand-lg " id="mynav">
 
@@ -43,19 +43,19 @@
 
                     <ul class="navbar-nav m-auto">
                         <li class="nav-item " id="MYNAVBAR">
-                            <a class="nav-link text-white active" aria-current="page" href="#Hero">Home</a>
+                            <a class="nav-link text-dark fs-5 " aria-current="page" href="#Hero">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#About">About</a>
+                            <a class="nav-link text-dark fs-5 " href="#About">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white " href="#skill">Skills</a>
+                            <a class="nav-link text-dark fs-5  " href="#skill">Skills</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white " href="#Projects">Projects</a>
+                            <a class="nav-link text-dark fs-5 " href="#Projects">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white " href="#Education">Education</a>
+                            <a class="nav-link text-dark fs-5 " href="#Education">Education</a>
                         </li>
                     </ul>
 
@@ -130,12 +130,10 @@
                                             class="iconabout">/</span> CSS <span class="iconabout">/</span> JavaScript
                                     </h6>
                                     <h6 class="fs-5">
-                                        <i class="ri-arrow-right-line fs-4 iconabout"></i> React JS <span
-                                            class="iconabout">/</span> Node <span class="iconabout">/</span> Express
+                                        <i class="ri-arrow-right-line fs-4 iconabout"></i> React JS
                                     </h6>
                                     <h6 class="fs-5">
-                                        <i class="ri-arrow-right-line fs-4 iconabout"></i> HTML <span
-                                            class="iconabout">/</span> CSS <span class="iconabout">/</span> JavaScript
+                                        <i class="ri-arrow-right-line fs-4 iconabout"></i> MongoDB
                                     </h6>
 
                                 </div>
@@ -152,11 +150,11 @@
 
 
                                     <h6 class="fs-5">
-                                        <i class="ri-arrow-right-line fs-4 iconabout"></i> Mongo DB
+                                        <i class="ri-arrow-right-line fs-4 iconabout"></i> Node <span
+                                            class="iconabout">/</span> Express
                                     </h6>
                                     <h6 class="fs-5">
-                                        <i class="ri-arrow-right-line fs-4 iconabout"></i> HTML <span
-                                            class="iconabout">/</span> CSS <span class="iconabout">/</span> JavaScript
+                                        <i class="ri-arrow-right-line fs-4 iconabout"></i> EJS
                                     </h6>
                                 </div>
 
@@ -186,18 +184,22 @@
         <div class="container p-5">
 
             <p class="text-center text-secondary">Pro Skills</p>
-            <h1 class="text-center text-white" data-aos="zoom-in" data-aos-duration="2000">let's Explore Popular <span
+            <h1 class="text-center " data-aos="zoom-in" data-aos-duration="2000">let's Explore Popular <span
                     class="text-info">Skills & <br>
                     Experience</span></h1>
 
             <div class="row">
 
-                <div class="col-md-3">
+                <div class="col-md-3 ">
 
                     <div class="skills-card  text-center mt-4" data-aos="zoom-in" data-aos-duration="1000">
                         <img src="./images/HTML.png" alt="" height="50">
-                        <h5 class="text-white mt-4 mb-4">HTML</h5>
-                        <div class="bg-white  mx-auto px-1 py-2 rounded-4 text-black fw-bolder">90%</div>
+                        <h5 class="text-white mt-4 mb-4 skills-title">HTML</h5>
+                        <!-- <div class="bg-white  mx-auto px-1 py-2 rounded-4 text-black fw-bolder bg-info">90%</div> -->
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:90% ">
+                            </div>
+                        </div>
                     </div>
 
                 </div>
@@ -206,8 +208,12 @@
 
                     <div class="skills-card text-center mt-4" data-aos="zoom-in" data-aos-duration="1000">
                         <img src="./images/css.png" alt="" height="50">
-                        <h5 class="text-white mt-4 mb-4">CSS</h5>
-                        <div class="bg-white  mx-auto px-1 py-2 rounded-4 text-black fw-bolder">90%</div>
+                        <h5 class="text-white mt-4 mb-4 skills-title">CSS</h5>
+                        <!-- <div class="bg-white  mx-auto px-1 py-2 rounded-4 text-black fw-bolder">90%</div> -->
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:90% ">
+                            </div>
+                        </div>
                     </div>
 
                 </div>
@@ -216,8 +222,26 @@
 
                     <div class="skills-card  text-center mt-4 " data-aos="zoom-in" data-aos-duration="1000">
                         <img src="./images/bootstrap.png" alt="" height="50">
-                        <h5 class="text-white mt-4 mb-4">Bootstrap</h5>
-                        <div class="bg-white  mx-auto px-1 py-2 rounded-4 text-black fw-bolder">80%</div>
+                        <h5 class="text-white mt-4 mb-4 skills-title">Bootstrap</h5>
+                        <!-- <div class="bg-white  mx-auto px-1 py-2 rounded-4 text-black fw-bolder">80%</div> -->
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:80% ">
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="col-md-3">
+
+                    <div class="skills-card  text-center mt-4 " data-aos="zoom-in" data-aos-duration="1000">
+                        <img src="./images/Tailwind.png" alt="" height="50">
+                        <h5 class="text-white mt-4 mb-4 text-truncate skills-title">Tailwind Css</h5>
+                        <!-- <div class="bg-white  mx-auto px-1 py-2 rounded-4 text-black fw-bolder">60%</div> -->
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:60% ">
+                            </div>
+                        </div>
                     </div>
 
                 </div>
@@ -226,8 +250,12 @@
 
                     <div class="skills-card  text-center mt-4 " data-aos="zoom-in" data-aos-duration="1000">
                         <img src="./images/react.png" alt="" height="50">
-                        <h5 class="text-white mt-4 mb-4">React</h5>
-                        <div class="bg-white  mx-auto px-1 py-2 rounded-4 text-black fw-bolder">70%</div>
+                        <h5 class="text-white mt-4 mb-4 skills-title">React js</h5>
+                        <!-- <div class="bg-white  mx-auto px-1 py-2 rounded-4 text-black fw-bolder">70%</div> -->
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:70% ">
+                            </div>
+                        </div>
                     </div>
 
                 </div>
@@ -236,8 +264,12 @@
 
                     <div class="skills-card  text-center mt-4 " data-aos="zoom-in" data-aos-duration="1000">
                         <img src="./images/node.png" alt="" height="50">
-                        <h5 class="text-white mt-4 mb-4">Node</h5>
-                        <div class="bg-white  mx-auto px-1 py-2 rounded-4 text-black fw-bolder">70%</div>
+                        <h5 class="text-white mt-4 mb-4 skills-title">Node js</h5>
+                        <!-- <div class="bg-white  mx-auto px-1 py-2 rounded-4 text-black fw-bolder">70%</div> -->
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:70% ">
+                            </div>
+                        </div>
                     </div>
 
                 </div>
@@ -245,9 +277,13 @@
                 <div class="col-md-3">
 
                     <div class="skills-card  text-center mt-4 " data-aos="zoom-in" data-aos-duration="1000">
-                        <img src="./images/node-express.png" alt="" height="50">
-                        <h5 class="text-white mt-4 mb-4 text-truncate">Node Express</h5>
-                        <div class="bg-white  mx-auto px-1 py-2 rounded-4 text-black fw-bolder">70%</div>
+                        <img src="./images/Node_express.png" alt="" height="50">
+                        <h5 class="text-white mt-4 mb-4 skills-title">Express js</h5>
+                        <!-- <div class="bg-white  mx-auto px-1 py-2 rounded-4 text-black fw-bolder">70%</div> -->
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:70% ">
+                            </div>
+                        </div>
                     </div>
 
                 </div>
@@ -256,31 +292,22 @@
 
                     <div class="skills-card  text-center mt-4 " data-aos="zoom-in" data-aos-duration="1000">
                         <img src="./images/mongoDB.png" alt="" height="50">
-                        <h5 class="text-white mt-4 mb-4">MongoDB</h5>
-                        <div class="bg-white  mx-auto px-1 py-2 rounded-4 text-black fw-bolder">70%</div>
+                        <h5 class="text-white mt-4 mb-4 skills-title">MongoDB</h5>
+                        <!-- <div class="bg-white  mx-auto px-1 py-2 rounded-4 text-black fw-bolder">70%</div> -->
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:70% ">
+                            </div>
+                        </div>
                     </div>
 
                 </div>
 
-                <div class="col-md-3">
 
-                    <div class="skills-card  text-center mt-4 " data-aos="zoom-in" data-aos-duration="1000">
-                        <img src="./images/communication.png" alt="" height="50">
-                        <h5 class="text-white mt-4 mb-4 text-truncate">Communication Skill</h5>
-                        <div class="bg-white  mx-auto px-1 py-2 rounded-4 text-black fw-bolder">90%</div>
-                    </div>
-
-                </div>
 
             </div>
 
 
         </div>
-
-
-
-
-
 
     </section>
 
@@ -291,6 +318,7 @@
     <section id="Projects">
 
         <div class="container p-5">
+
             <p class="text-center text-info fw-bold">Projects</p>
             <h1 class="text-center text-white mb-5">view My Latest <span class="text-info"> Works</span></h1>
 
@@ -494,7 +522,7 @@
                         <div class="col-md-4">
 
                             <div class="d-flex justify-content-center align-items-center h-100">
-                                <img src="./images/Aims school.png" class="img-fluid rounded-start" alt="..."
+                                <img src="./images/Aim_School.png" class="img-fluid rounded-start" alt="..."
                                     loading="lazy" style="height: 150px;">
                             </div>
 
@@ -505,9 +533,10 @@
                             <div class="card-body">
 
                                 <h3 class="card-title">The Aim School Lodhran</h3>
-                                <h6 class="text-secondary mb-1">Matric</h6>
-                                <p class="mb-1">February 2017</p>
-                                <p class="card-text">I completed my matriculation at The Aim School Lodhran, where I
+                                <h6 class="text-secondary mb-1 fw-bold">Matric</h6>
+                                <i class="mb-1">February 2017</i>
+                                <p class="card-text parag">I completed my matriculation at The Aim School Lodhran, where
+                                    I
                                     gained a strong academic foundation. The school's support and challenging curriculum
                                     prepared me well for the future.</p>
 
@@ -558,7 +587,7 @@
 
                             <div class="d-flex justify-content-center align-items-center h-100">
 
-                                <img src="./images/ripah college.jpeg" onerror="this.src='./images/bootstrap.png';"
+                                <img src="./images/ripah_college.png" onerror="this.src='./images/bootstrap.png';"
                                     class="img-fluid rounded-start" alt="..." loading="lazy" onerror=""
                                     style="height: 150px;">
 
@@ -571,9 +600,9 @@
                             <div class="card-body">
 
                                 <h3 class="card-title">The Ripah College Lodhran</h3>
-                                <h6 class="text-secondary mb-1"> ICS Computer Science</h6>
-                                <p class="mb-1">September 2019 - 2021</p>
-                                <p class="card-text">
+                                <h6 class="text-secondary mb-1 fw-bold"> ICS Computer Science</h6>
+                                <i class="mb-1">September 2019 - 2021</i>
+                                <p class="card-text parag">
                                     Studied basic computer science topics, including programming and computer systems.
                                 </p>
 
@@ -629,7 +658,7 @@
 
                             <div class="d-flex justify-content-center align-items-center h-100">
 
-                                <img src="./images/iub logo.png" class="img-fluid rounded-start" alt="..."
+                                <img src="./images/iub_log.png" class="img-fluid rounded-start" alt="..."
                                     style="height: 150px;">
 
                             </div>
@@ -641,10 +670,11 @@
                             <div class="card-body  ">
 
                                 <h3 class="card-title">The Islamia University of Bahawalpur</h3>
-                                <h6 class="text-secondary mb-1">Bachelor in Computer Science (Continue ... )</h6>
-                                <p class="mb-1">September 2021 - 2025 (Expected)</p>
+                                <h6 class="text-secondary mb-1 fw-bold">Bachelor in Computer Science (Continue ... )
+                                </h6>
+                                <i class="mb-1">September 2021 - 2025 (Expected)</i>
 
-                                <p class="card-text">
+                                <p class="card-text parag">
                                     Studying computer science with an emphasis on programming, problem-solving, and
                                     working with data.</p>
 
@@ -689,10 +719,12 @@
                     <h5 class="text-info">Follow Me</h5>
 
                     <div class="social-icons">
-                        <a href="#" class="text-white me-3"><i class="ri-facebook-fill"></i></a>
-                        <a href="#" class="text-white me-3"><i class="ri-twitter-fill"></i></a>
-                        <a href="#" class="text-white me-3"><i class="ri-linkedin-fill"></i></a>
-                        <a href="#" class="text-white"><i class="ri-github-fill"></i></a>
+                        <a href="https://www.facebook.com/inoxent.irfan.904?mibextid=kFxxJD" target="_blank"
+                            class="text-white me-3"><i class="ri-facebook-fill"></i> </a>
+                        <a href="#" target="_blank" class="text-white me-3"><i class="ri-twitter-fill"></i></a>
+                        <a href="#" target="_blank" class="text-white me-3"><i class="ri-linkedin-fill"></i></a>
+                        <a href="https://github.com/Muhammadirfan40" target="_blank" class="text-white"><i
+                                class="ri-github-fill"></i></a>
                     </div>
 
                 </div>
