--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
 
 </head>
 
@@ -50,6 +51,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark fs-5  " href="#skill">Skills</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark fs-5  " href="#Services">Services</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark fs-5 " href="#Projects">Projects</a>
@@ -348,6 +352,110 @@
 
     <!-- skills End -->
 
+
+    <!-- Services start -->
+
+   <section id="Services" class="bg-light py-5">
+    <div class="container p-5">
+        <h1 class="text-center text-info mb-5">SERVICES</h1>
+        <div class="row">
+
+            <div class="col-md-4 mb-4">
+                <div class="card shadow-lg border-0 transition">
+                    <div class="card-body text-center">
+                        <div class="mb-3">
+                            <i class="ri-computer-line display-6 text-primary"></i>
+                        </div>
+                        <h4 class="card-title font-weight-bold">FullStack Development</h4>
+                        <p class="card-text text-muted">Experienced in MERN stack development. Expert in MongoDB, Express, React.js, and Node.js.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-4">
+                <div class="card shadow-lg border-0 transition">
+                    <div class="card-body text-center">
+                        <div class="mb-3">
+                            <i class="ri-code-s-slash-fill display-6 text-primary"></i>
+                        </div>
+                        <h4 class="card-title font-weight-bold">Frontend Development</h4>
+                        <p class="card-text text-muted">More than 2 years of experience in React.js, Next.js, JS, HTML5, CSS3, SASS, and Bootstrap5.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-4">
+                <div class="card shadow-lg border-0 transition">
+                    <div class="card-body text-center">
+                        <div class="mb-3">
+                            <i class="ri-database-2-fill display-6 text-primary"></i>
+                        </div>
+                        <h4 class="card-title font-weight-bold">Backend Development</h4>
+                        <p class="card-text text-muted">Expert in Node.js, Express.js, and MongoDB backend and API development.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-4">
+                <div class="card shadow-lg border-0 transition">
+                    <div class="card-body text-center">
+                        <div class="mb-3">
+                            <i class="ri-tools-fill display-6 text-primary"></i>
+                        </div>
+                        <h4 class="card-title font-weight-bold">Bug Fixing</h4>
+                        <p class="card-text text-muted">Solid experience in MERN stack bug fixing and API issues resolution.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-4">
+                <div class="card shadow-lg border-0 transition">
+                    <div class="card-body text-center">
+                        <div class="mb-3">
+                            <i class="ri-layout-masonry-fill display-6 text-primary"></i>
+                        </div>
+                        <h4 class="card-title font-weight-bold">Responsive Design</h4>
+                        <p class="card-text text-muted">Experienced in building fully responsive and user-friendly websites.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-4">
+                <div class="card shadow-lg border-0 transition">
+                    <div class="card-body text-center">
+                        <div class="mb-3">
+                            <i class="ri-admin-fill display-6 text-primary"></i>
+                        </div>
+                        <h4 class="card-title font-weight-bold">Admin Template</h4>
+                        <p class="card-text text-muted">Solid understanding of creating an admin dashboard.</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+<style>
+    .card {
+        transition: transform 0.2s;
+    }
+    .card:hover {
+        transform: translateY(-5px);
+    }
+    .bg-light {
+        background-color: #f8f9fa !important;
+    }
+    .text-info {
+        color: #17a2b8 !important;
+    }
+    .text-muted {
+        color: #6c757d !important;
+    }
+</style>
+
+    <!-- Services start End-->
+
     <!-- Projects start-->
 
     <section id="Projects">
@@ -362,8 +470,8 @@
 
                 <div class="col-md-4 mb-3">
 
-                    <div class="card h-100 ">
-                        <img src="./images/first-project.jpg" class="card-img-top trans img-fluid" alt="image not found"
+                    <div class="card h-100 trans">
+                        <img src="./images/first-project.jpg" class="card-img-top  img-fluid" alt="image not found"
                             style="height: 300px;">
                         <div class="card-body">
                             <h5 class="card-title">HTML / CSS</h5>
@@ -436,7 +544,8 @@
                         <div class="card-body">
                             <h5 class="card-title">React JS</h5>
                             <p class="card-text text-secondary">
-                                I built a responsive furniture site using React JS with CRUD operation for easy item management on any device.</p>
+                                I built a responsive furniture site using React JS with CRUD operation for easy item
+                                management on any device.</p>
                             <div
                                 class="d-flex justify-content-between flex-wrap gap-2 justify-content-lg-evenly justify-content-md-evenly">
                                 <a href="https://react-project-smoky-one.vercel.app/" target="_blank"
@@ -691,6 +800,36 @@
                                     I
                                     gained a strong academic foundation. The school's support and challenging curriculum
                                     prepared me well for the future.</p>
+
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="card bg-transparent mb-3 p-2">
+
+                    <div class="row g-0">
+
+                        <div class="col-md-4">
+
+                            <div class="d-flex justify-content-center align-items-center h-100">
+                                <img src="./images/Ticerlogo.png" class="img-fluid rounded-start" width="150" alt="..."
+                                    loading="lazy" style="height: 150px;">
+                            </div>
+
+                        </div>
+
+                        <div class="col-md-8">
+
+                            <div class="card-body">
+
+                                <h3 class="card-title">TICER</h3>
+                                <h6 class="text-secondary mb-1 fw-bold">MERN Stack</h6>
+                                <i class="mb-1">February 2024</i>
+                                <p class="card-text parag">I completed a six-month MERN stack course, learning to build
+                                    websites with MongoDB, Express.js, React, and Node.js.</p>
 
                             </div>
                         </div>
