--- a/index.html
+++ b/index.html
@@ -355,104 +355,113 @@
 
     <!-- Services start -->
 
-   <section id="Services" class="bg-light py-5">
-    <div class="container p-5">
-        <h1 class="text-center text-info mb-5">SERVICES</h1>
-        <div class="row">
+    <section id="Services" class="bg-light py-5">
+        <div class="container p-5">
+            <h1 class="text-center text-info mb-5">SERVICES</h1>
+            <div class="row">
 
-            <div class="col-md-4 mb-4">
-                <div class="card shadow-lg border-0 transition">
-                    <div class="card-body text-center">
-                        <div class="mb-3">
-                            <i class="ri-computer-line display-6 text-primary"></i>
+                <div class="col-md-4 mb-4">
+                    <div class="card shadow-lg border-0 transition">
+                        <div class="card-body text-center">
+                            <div class="mb-3">
+                                <i class="ri-computer-line display-6 text-primary"></i>
+                            </div>
+                            <h4 class="card-title font-weight-bold">MERN Stack</h4>
+                            <p class="card-text text-muted">Experienced in MERN stack development. Expert in MongoDB,
+                                Express, React.js, and Node.js.</p>
                         </div>
-                        <h4 class="card-title font-weight-bold">FullStack Development</h4>
-                        <p class="card-text text-muted">Experienced in MERN stack development. Expert in MongoDB, Express, React.js, and Node.js.</p>
                     </div>
                 </div>
-            </div>
 
-            <div class="col-md-4 mb-4">
-                <div class="card shadow-lg border-0 transition">
-                    <div class="card-body text-center">
-                        <div class="mb-3">
-                            <i class="ri-code-s-slash-fill display-6 text-primary"></i>
+                <div class="col-md-4 mb-4">
+                    <div class="card shadow-lg border-0 transition">
+                        <div class="card-body text-center">
+                            <div class="mb-3">
+                                <i class="ri-code-s-slash-fill display-6 text-primary"></i>
+                            </div>
+                            <h4 class="card-title font-weight-bold">Frontend Development</h4>
+                            <p class="card-text text-muted">Skilled in React.js, JavaScript, HTML5, CSS3, and Bootstrap
+                                5 for responsive web applications.</p>
                         </div>
-                        <h4 class="card-title font-weight-bold">Frontend Development</h4>
-                        <p class="card-text text-muted">More than 2 years of experience in React.js, Next.js, JS, HTML5, CSS3, SASS, and Bootstrap5.</p>
                     </div>
                 </div>
-            </div>
 
-            <div class="col-md-4 mb-4">
-                <div class="card shadow-lg border-0 transition">
-                    <div class="card-body text-center">
-                        <div class="mb-3">
-                            <i class="ri-database-2-fill display-6 text-primary"></i>
+                <div class="col-md-4 mb-4">
+                    <div class="card shadow-lg border-0 transition">
+                        <div class="card-body text-center">
+                            <div class="mb-3">
+                                <i class="ri-database-2-fill display-6 text-primary"></i>
+                            </div>
+                            <h4 class="card-title font-weight-bold">Backend Development</h4>
+                            <p class="card-text text-muted">Expert in Node.js, Express.js, and MongoDB backend and API
+                                development.</p>
                         </div>
-                        <h4 class="card-title font-weight-bold">Backend Development</h4>
-                        <p class="card-text text-muted">Expert in Node.js, Express.js, and MongoDB backend and API development.</p>
                     </div>
                 </div>
-            </div>
 
-            <div class="col-md-4 mb-4">
-                <div class="card shadow-lg border-0 transition">
-                    <div class="card-body text-center">
-                        <div class="mb-3">
-                            <i class="ri-tools-fill display-6 text-primary"></i>
+                <div class="col-md-4 mb-4">
+                    <div class="card shadow-lg border-0 transition">
+                        <div class="card-body text-center">
+                            <div class="mb-3">
+                                <i class="ri-tools-fill display-6 text-primary"></i>
+                            </div>
+                            <h4 class="card-title font-weight-bold">Bug Fixing</h4>
+                            <p class="card-text text-muted">Solid experience in MERN stack bug fixing and API issues
+                                resolution.</p>
                         </div>
-                        <h4 class="card-title font-weight-bold">Bug Fixing</h4>
-                        <p class="card-text text-muted">Solid experience in MERN stack bug fixing and API issues resolution.</p>
                     </div>
                 </div>
-            </div>
 
-            <div class="col-md-4 mb-4">
-                <div class="card shadow-lg border-0 transition">
-                    <div class="card-body text-center">
-                        <div class="mb-3">
-                            <i class="ri-layout-masonry-fill display-6 text-primary"></i>
+                <div class="col-md-4 mb-4">
+                    <div class="card shadow-lg border-0 transition">
+                        <div class="card-body text-center">
+                            <div class="mb-3">
+                                <i class="ri-layout-masonry-fill display-6 text-primary"></i>
+                            </div>
+                            <h4 class="card-title font-weight-bold">Responsive Design</h4>
+                            <p class="card-text text-muted">Experienced in building fully responsive and user-friendly
+                                websites.</p>
                         </div>
-                        <h4 class="card-title font-weight-bold">Responsive Design</h4>
-                        <p class="card-text text-muted">Experienced in building fully responsive and user-friendly websites.</p>
                     </div>
                 </div>
-            </div>
 
-            <div class="col-md-4 mb-4">
-                <div class="card shadow-lg border-0 transition">
-                    <div class="card-body text-center">
-                        <div class="mb-3">
-                            <i class="ri-admin-fill display-6 text-primary"></i>
+                <div class="col-md-4 mb-4">
+                    <div class="card shadow-lg border-0 transition">
+                        <div class="card-body text-center">
+                            <div class="mb-3">
+                                <i class="ri-admin-fill display-6 text-primary"></i>
+                            </div>
+                            <h4 class="card-title font-weight-bold">Admin Template</h4>
+                            <p class="card-text text-muted">Solid understanding of creating an admin dashboard.</p>
                         </div>
-                        <h4 class="card-title font-weight-bold">Admin Template</h4>
-                        <p class="card-text text-muted">Solid understanding of creating an admin dashboard.</p>
                     </div>
                 </div>
-            </div>
 
+            </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<style>
-    .card {
-        transition: transform 0.2s;
-    }
-    .card:hover {
-        transform: translateY(-5px);
-    }
-    .bg-light {
-        background-color: #f8f9fa !important;
-    }
-    .text-info {
-        color: #17a2b8 !important;
-    }
-    .text-muted {
-        color: #6c757d !important;
-    }
-</style>
+    <style>
+        .card {
+            transition: transform 0.2s;
+        }
+
+        .card:hover {
+            transform: translateY(-5px);
+        }
+
+        .bg-light {
+            background-color: #f8f9fa !important;
+        }
+
+        .text-info {
+            color: #17a2b8 !important;
+        }
+
+        .text-muted {
+            color: #6c757d !important;
+        }
+    </style>
 
     <!-- Services start End-->
 
