--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 
     <!-- Services start -->
 
-    <section id="Services" class="bg-light py-5">
+    <section id="Services" class="bg-lights py-5">
         <div class="container p-5">
             <h1 class="text-center text-info mb-5">SERVICES</h1>
             <div class="row">
@@ -364,7 +364,7 @@
                     <div class="card shadow-lg border-0 transition">
                         <div class="card-body text-center">
                             <div class="mb-3">
-                                <i class="ri-computer-line display-6 text-primary"></i>
+                                <i class="ri-computer-fill display-6 text-info"></i>
                             </div>
                             <h4 class="card-title font-weight-bold">MERN Stack</h4>
                             <p class="card-text text-muted">Experienced in MERN stack development. Expert in MongoDB,
@@ -377,7 +377,7 @@
                     <div class="card shadow-lg border-0 transition">
                         <div class="card-body text-center">
                             <div class="mb-3">
-                                <i class="ri-code-s-slash-fill display-6 text-primary"></i>
+                                <i class="ri-code-s-slash-fill display-6 text-info"></i>
                             </div>
                             <h4 class="card-title font-weight-bold">Frontend Development</h4>
                             <p class="card-text text-muted">Skilled in React.js, JavaScript, HTML5, CSS3, and Bootstrap
@@ -390,7 +390,7 @@
                     <div class="card shadow-lg border-0 transition">
                         <div class="card-body text-center">
                             <div class="mb-3">
-                                <i class="ri-database-2-fill display-6 text-primary"></i>
+                                <i class="ri-database-2-fill display-6 text-info"></i>
                             </div>
                             <h4 class="card-title font-weight-bold">Backend Development</h4>
                             <p class="card-text text-muted">Expert in Node.js, Express.js, and MongoDB backend and API
@@ -403,7 +403,7 @@
                     <div class="card shadow-lg border-0 transition">
                         <div class="card-body text-center">
                             <div class="mb-3">
-                                <i class="ri-tools-fill display-6 text-primary"></i>
+                                <i class="ri-tools-fill display-6 text-info"></i>
                             </div>
                             <h4 class="card-title font-weight-bold">Bug Fixing</h4>
                             <p class="card-text text-muted">Solid experience in MERN stack bug fixing and API issues
@@ -416,7 +416,7 @@
                     <div class="card shadow-lg border-0 transition">
                         <div class="card-body text-center">
                             <div class="mb-3">
-                                <i class="ri-layout-masonry-fill display-6 text-primary"></i>
+                                <i class="ri-layout-masonry-fill display-6 text-info"></i>
                             </div>
                             <h4 class="card-title font-weight-bold">Responsive Design</h4>
                             <p class="card-text text-muted">Experienced in building fully responsive and user-friendly
@@ -429,7 +429,7 @@
                     <div class="card shadow-lg border-0 transition">
                         <div class="card-body text-center">
                             <div class="mb-3">
-                                <i class="ri-admin-fill display-6 text-primary"></i>
+                                <i class="ri-admin-fill display-6 text-info"></i>
                             </div>
                             <h4 class="card-title font-weight-bold">Admin Template</h4>
                             <p class="card-text text-muted">Solid understanding of creating an admin dashboard.</p>
@@ -450,7 +450,7 @@
             transform: translateY(-5px);
         }
 
-        .bg-light {
+        .bg-lights {
             background-color: #f8f9fa !important;
         }
 
