--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
             <!-- <p class="text-center text-secondary">Pro Skills</p> -->
             <h1 class="text-center " data-aos="zoom-in" data-aos-duration="2000">My <span
                     class="text-info">Skills</span></h1>
+                    <div style="height: 2px; width: 120px;" class="bg-info mx-auto mb-5"></div>
 
             <div class="row">
 
@@ -357,11 +358,12 @@
 
     <section id="Services" class="bg-lights py-5">
         <div class="container p-5">
-            <h1 class="text-center text-info mb-5">SERVICES</h1>
+            <h1 class="text-center text-info">SERVICES</h1>
+            <div style="height: 2px; width: 100px;" class="bg-info mx-auto mb-5"></div>
             <div class="row">
 
                 <div class="col-md-4 mb-4">
-                    <div class="card shadow-lg border-0 transition">
+                    <div class="card border-top border-2 border-info  shadow-lg border-0 transition">
                         <div class="card-body text-center">
                             <div class="mb-3">
                                 <i class="ri-computer-fill display-6 text-info"></i>
@@ -374,7 +376,7 @@
                 </div>
 
                 <div class="col-md-4 mb-4">
-                    <div class="card shadow-lg border-0 transition">
+                    <div class="card  border-top border-2 border-info shadow-lg border-0 transition">
                         <div class="card-body text-center">
                             <div class="mb-3">
                                 <i class="ri-code-s-slash-fill display-6 text-info"></i>
@@ -387,7 +389,7 @@
                 </div>
 
                 <div class="col-md-4 mb-4">
-                    <div class="card shadow-lg border-0 transition">
+                    <div class="card  border-top border-2 border-info shadow-lg border-0 transition">
                         <div class="card-body text-center">
                             <div class="mb-3">
                                 <i class="ri-database-2-fill display-6 text-info"></i>
@@ -400,7 +402,7 @@
                 </div>
 
                 <div class="col-md-4 mb-4">
-                    <div class="card shadow-lg border-0 transition">
+                    <div class="card  border-top border-2 border-info shadow-lg border-0 transition">
                         <div class="card-body text-center">
                             <div class="mb-3">
                                 <i class="ri-tools-fill display-6 text-info"></i>
@@ -413,7 +415,7 @@
                 </div>
 
                 <div class="col-md-4 mb-4">
-                    <div class="card shadow-lg border-0 transition">
+                    <div class="card  border-top border-2 border-info shadow-lg border-0 transition">
                         <div class="card-body text-center">
                             <div class="mb-3">
                                 <i class="ri-layout-masonry-fill display-6 text-info"></i>
@@ -426,7 +428,7 @@
                 </div>
 
                 <div class="col-md-4 mb-4">
-                    <div class="card shadow-lg border-0 transition">
+                    <div class="card  border-top border-2 border-info shadow-lg border-0 transition">
                         <div class="card-body text-center">
                             <div class="mb-3">
                                 <i class="ri-admin-fill display-6 text-info"></i>
