--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <!-- <p class="text-center text-secondary">Pro Skills</p> -->
             <h1 class="text-center " data-aos="zoom-in" data-aos-duration="2000">My <span
                     class="text-info">Skills</span></h1>
-                    <div style="height: 2px; width: 120px;" class="bg-info mx-auto mb-5"></div>
+            <div style="height: 2px; width: 120px;" class="bg-info mx-auto mb-5"></div>
 
             <div class="row">
 
@@ -481,8 +481,8 @@
 
                 <div class="col-md-4 mb-3">
 
-                    <div class="card h-100 trans">
-                        <img src="./images/first-project.jpg" class="card-img-top  img-fluid" alt="image not found"
+                    <div class="card h-100 ">
+                        <img src="./images/first-project.jpg" class="card-img-top trans img-fluid" alt="image not found"
                             style="height: 300px;">
                         <div class="card-body">
                             <h5 class="card-title">HTML / CSS</h5>
