--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="overlay"></div>
 
 
-        <div class="nav-color p-2 rounded-bottom bg-body-tertiary  fixed-top" style="width: 100vw; max-width: 100%;">
+        <div class="nav-color p-2 rounded-bottom bg-white  fixed-top" >
 
             <nav class="navbar container navbar-expand-lg " id="mynav">
 
